--- a/stylesheets/lightbox-fu.css
+++ b/stylesheets/lightbox-fu.css
@@ -9,7 +9,7 @@
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background: url(/images/overlay.png);
+	background: url(../images/overlay.png);
 }
 
 #lOverlay #lWindow {
