--- a/stylesheets/lightbox-fu-ie7.css
+++ b/stylesheets/lightbox-fu-ie7.css
@@ -1,20 +1,21 @@
-#lightboxfu {
+.lightboxfu {
   display: none;
 }
 
-#lOverlay {
+.lOverlay {
 	background: none;
 	-ieh: expression(
 		this.parsed ? 0 : (
 			ov = document.createElement('div'),
 			ov.id = 'ov',
+      ov.class = 'ov',
 			this.parentNode.insertBefore(ov, this),
 			this.parsed = 1
 		)
 	)
 }
 
-#ov {
+.ov {
 	position: fixed;
 	left: 0;
 	top: 0;
@@ -24,12 +25,12 @@
 	filter: progid:DXImageTransform.Microsoft.Alpha(opacity=60);
 }
 
-#lOverlay #lWindow {
+.lOverlay .lWindow {
 	position: absolute;
 	top: 50%;
 }
 
-#lOverlay #lInner {
+.lOverlay .lInner {
 	position: relative;
 	top: -50%;
 	height: expression(this.scrollHeight > 350 ? '350px' : 'auto' );
